# igia

./: README.md  pyproject.toml  run.py  stocks.py
igia/: agent.py  model.py  server.py
