[tool.poetry]
name = "igia"
version = "0.1.0"
description = "Agent Based Simulations"
authors = ["Prayson W. Daniel <prayson.wilfred@otea.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.8,<3.11"
mesa = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
